fixed padding on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -999,6 +999,6 @@ footer .social-links a:hover {
   }
 
   main {
-    padding-top: 7rem;
+    padding: 9rem 2rem 4rem;
   }
 }
